[package]
name = "lynx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
envy = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }

[dev-dependencies]
httpmock = "0.6"
tokio-test = "0.4.2"